Add website structure
Added three subpages for recipes. Linked subpages from homepage

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/lasagna.html">Lasagna</a> <br>
+    <a href="./recipes/bolognese.html">Bolognese</a> <br>
+    <a href="./recipes/pizza_dough.html">Pizza Dough</a>
 </body>
 </html>
