Add recipe page contents
Added image, image description, description, ingredients and steps to all recipe pages

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,5 +7,30 @@
 </head>
 <body>
     <h1>How to make Bolognese</h1>
+
+    <img src="../images/bolognese.jpg" alt="Closeup of Bolognese sauce served" width="20%">
+    <p>Image of Bolognese sauce served. Copyright: rantotthuswokban.com</p>
+
+    <h2>Description</h2>
+
+    <p>Italian pasta sauce with meat and tomato. A true classic.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>Minced meat</li>
+        <li>Red onion</li>
+        <li>Tomato sauce</li>
+        <li>Seasoning</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Chop and saute the onion for 7-8 mins.</li>
+        <li>Add meat and saute longer (10-15 mins)</li>
+        <li>Add tomato sauce and seasoning. Cook for 2 mins</li>
+        <li>Serve with pasta and Grana</li>
+    </ol>
 </body>
 </html>
