--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>How to make Lasagna</h1>
+
+    <img src="../images/lasagne.jpg" alt="Closeup of Lasagne served" width="20%">
+    <p>Image of Lasagne served. Copyright: rantotthuswokban.com</p>
+
+    <h2>Description</h2>
+
+    <p>Delicious baked Italian dish with mean, pasta and lots of cheese. Vegan options are great too</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>Minced meat</li>
+        <li>Cheese</li>
+        <li>Tomato sauce</li>
+        <li>Lasagne pasta</li>
+        <li>Red onion</li>
+        <li>Seasoning</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Chop and saute the onion</li>
+        <li>Add meat and saute longer</li>
+        <li>Add tomato sauce and seasoning. Cook for 2 mins</li>
+        <li>Layer this mix with pasta and cheese in a pot. Start with sauce, finish with cheese</li>
+        <li>Bake in the oven for 25-30 mins at 180 degrees Celsius</li>
+    </ol>
+
 </body>
 </html>
