--- a/recipes/pizza_dough.html
+++ b/recipes/pizza_dough.html
@@ -7,5 +7,33 @@
 </head>
 <body>
     <h1>How to make Pizza dough</h1>
+
+    <img src="../images/pizza_dough.jpg" alt="Closeup of raw pizza dough" width="20%">
+    <p>Image of raw pizza dough. Copyright: rantotthuswokban.com</p>
+
+    <h2>Description</h2>
+
+    <p>Dough for the most famous dish worldwide: pizza. Easy to make and tastes great (once baked ofc).</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>Flour 500g</li>
+        <li>Lukewarm water 300ml</li>
+        <li>Olive oil 2 spoons</li>
+        <li>Yeast half a pack (25g)</li>
+        <li>Salt</li>
+        <li>Sugar</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Mix all liquids, add sugar and yeast. Wait for 15 mins.</li>
+        <li>Add liquid mix to flour and salt</li>
+        <li>Mix with hands until solid dough is done. Should not stick to your hands anymore</li>
+        <li>Cover up and leave at a warm place for 30 mins</li>
+        <li>Make 4 large pizzas out of the dough and bake for 7-8 mins at 250 degree Celsius</li>
+    </ol>
 </body>
 </html>
