Add back to home links to pages
Affected pages: lasagna, bolognese, pizza dough

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1>How to make Lasagna</h1>
+    <a href="../index.html">Back to Homepage</a> <br>
 
     <img src="../images/lasagne.jpg" alt="Closeup of Lasagne served" width="20%">
     <p>Image of Lasagne served. Copyright: rantotthuswokban.com</p>
 
     <h2>Description</h2>
 
-    <p>Delicious baked Italian dish with mean, pasta and lots of cheese. Vegan options are great too</p>
+    <p>Delicious baked Italian dish with meat, pasta and lots of cheese. Vegan options are great too</p>
 
     <h2>Ingredients</h2>
 
