--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>How to make Bolognese</h1>
+    <a href="../index.html">Back to Homepage</a> <br>
 
     <img src="../images/bolognese.jpg" alt="Closeup of Bolognese sauce served" width="20%">
     <p>Image of Bolognese sauce served. Copyright: rantotthuswokban.com</p>
