--- a/recipes/pizza_dough.html
+++ b/recipes/pizza_dough.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>How to make Pizza dough</h1>
+    <a href="../index.html">Back to Homepage</a> <br>
 
     <img src="../images/pizza_dough.jpg" alt="Closeup of raw pizza dough" width="20%">
     <p>Image of raw pizza dough. Copyright: rantotthuswokban.com</p>
