Design project pages with external css

--- a/recipes/pizza_dough.html
+++ b/recipes/pizza_dough.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza dough recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>How to make Pizza dough</h1>
@@ -14,12 +15,12 @@
 
     <h2>Description</h2>
 
-    <p>Dough for the most famous dish worldwide: pizza. Easy to make and tastes great (once baked ofc).</p>
+    <p id="pizza_desc">Dough for the most famous dish worldwide: pizza. Easy to make and tastes great (once baked ofc).</p>
 
     <h2>Ingredients</h2>
 
     <ul>
-        <li>Flour 500g</li>
+        <li class="first">Flour 500g</li>
         <li>Lukewarm water 300ml</li>
         <li>Olive oil 2 spoons</li>
         <li>Yeast half a pack (25g)</li>
@@ -30,7 +31,7 @@
     <h2>Steps</h2>
 
     <ol>
-        <li>Mix all liquids, add sugar and yeast. Wait for 15 mins.</li>
+        <li class="first">Mix all liquids, add sugar and yeast. Wait for 15 mins.</li>
         <li>Add liquid mix to flour and salt</li>
         <li>Mix with hands until solid dough is done. Should not stick to your hands anymore</li>
         <li>Cover up and leave at a warm place for 30 mins</li>
