--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolognese Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>How to make Bolognese</h1>
     <a href="../index.html">Back to Homepage</a> <br>
 
-    <img src="../images/bolognese.jpg" alt="Closeup of Bolognese sauce served" width="20%">
+    <img class="border" src="../images/bolognese.jpg" alt="Closeup of Bolognese sauce served" width="20%">
     <p>Image of Bolognese sauce served. Copyright: rantotthuswokban.com</p>
 
     <h2>Description</h2>
