--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>How to make Lasagna</h1>
@@ -20,7 +21,7 @@
 
     <ul>
         <li>Minced meat</li>
-        <li>Cheese</li>
+        <li class="important">Cheese</li>
         <li>Tomato sauce</li>
         <li>Lasagne pasta</li>
         <li>Red onion</li>
